Fix alternative promo rule styling, and implement alternative condition/action styling.  The colors are not perfect, but this is at least better then having a single flat color behind everything.
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@912651 13f79535-47bb-0310-9956-ffa450edef68

--- a/themes/tomahawk/webapp/tomahawk/css/style.css
+++ b/themes/tomahawk/webapp/tomahawk/css/style.css
@@ -2433,3 +2433,11 @@ background-image: none;
 #findScreenlet {
 margin-top: 0;
 }
+
+.row-level-one.alternate-row {
+background-color:#81817F;
+}
+.row-level-two {
+background-color:#D4D0C8;
+}
+
